3.10.5/_sources/gallery/mplot3d/wire3d.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/mplot3d/wire3d.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_mplot3d_wire3d.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_mplot3d_wire3d.py:


=================
3D wireframe plot
=================

A very basic demonstration of a wireframe plot.

.. GENERATED FROM PYTHON SOURCE LINES 8-24

.. code-block:: Python


    import matplotlib.pyplot as plt

    from mpl_toolkits.mplot3d import axes3d

    fig = plt.figure()
    ax = fig.add_subplot(projection='3d')

    # Grab some test data.
    X, Y, Z = axes3d.get_test_data(0.05)

    # Plot a basic wireframe.
    ax.plot_wireframe(X, Y, Z, rstride=10, cstride=10)

    plt.show()




.. image-sg:: /gallery/mplot3d/images/sphx_glr_wire3d_001.png
   :alt: wire3d
   :srcset: /gallery/mplot3d/images/sphx_glr_wire3d_001.png, /gallery/mplot3d/images/sphx_glr_wire3d_001_2_00x.png 2.00x
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 25-28

.. tags::
   plot-type: 3D,
   level: beginner


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 1.193 seconds)


.. _sphx_glr_download_gallery_mplot3d_wire3d.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: wire3d.ipynb <wire3d.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: wire3d.py <wire3d.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: wire3d.zip <wire3d.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
